tests/ui/specialization/min_specialization/bad-const-wf-doesnt-specialize.stderr
error[E0277]: the trait bound `S<N>: Clone` is not satisfied
  --> $DIR/bad-const-wf-doesnt-specialize.rs:8:29
   |
LL | impl<const N: i32> Copy for S<N> {}
   |                             ^^^^ the trait `Clone` is not implemented for `S<N>`
   |
   = help: the trait `Clone` is implemented for `S<L>`
note: required by a bound in `Copy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
help: consider annotating `S<N>` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct S<const L: usize>;
   |

error: the constant `N` is not of type `usize`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:8:29
   |
LL | impl<const N: i32> Copy for S<N> {}
   |                             ^^^^ expected `usize`, found `i32`
   |
note: required by a bound in `S`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:6:10
   |
LL | struct S<const L: usize>;
   |          ^^^^^^^^^^^^^^ required by this bound in `S`

error[E0308]: mismatched types
  --> $DIR/bad-const-wf-doesnt-specialize.rs:8:31
   |
LL | impl<const N: i32> Copy for S<N> {}
   |                               ^ expected `usize`, found `i32`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
